# kb

./: .coverage  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  issues.md  pyproject.toml
.opencode/: mcp.json
data/autocrud/case-study/data/resource/case-study:3733fc13-412c-4cf7-8e43-35d36e072e4b/case-study:3733fc13-412c-4cf7-8e43-35d36e072e4b:1/: no_ver
data/autocrud/case-study/data/resource/case-study:3733fc13-412c-4cf7-8e43-35d36e072e4b/case-study:3733fc13-412c-4cf7-8e43-35d36e072e4b:2/: no_ver
data/autocrud/case-study/data/store/3d0cceee-520c-4d65-a76c-faa6f08baae8/: data  info
data/autocrud/case-study/data/store/cbfabefd-8d22-4e9b-b3a2-c871050fdc28/: data  info
data/autocrud/case-study/meta/: case-study:3733fc13-412c-4cf7-8e43-35d36e072e4b.data
data/autocrud/glossary-entry/data/resource/glossary-entry:a684f0a6-d4b9-4792-b59f-f156ee66db74/glossary-entry:a684f0a6-d4b9-4792-b59f-f156ee66db74:1/: no_ver
data/autocrud/glossary-entry/data/store/5a6c4900-4f8b-40b3-b240-678a07b6d6ad/: data  info
data/autocrud/glossary-entry/meta/: glossary-entry:a684f0a6-d4b9-4792-b59f-f156ee66db74.data
data/benchmark/: test_cases.yaml
data/mock-fab-data/: README.md  defect_counts.csv  generate.py  wafer_history.csv
data/primers/: README.md  cmp-dishing-via-resistance.md  cu-electromigration.md  litho-overlay-confounders.md  pecvd-particle-pressure.md  scribe-line-not-causal.md  spike-anneal-dopant.md  tddb-gate-stack.md  via-etch-particle-mechanism.md
docs/: demo-user-flow.md
docs/textbook/: README.md
docs/textbook/01-feol/: 00-overview.md  01-substrate.md  02-sti-isolation.md  03-well-formation.md  04-fin-nanosheet.md  05-dummy-gate-spacer.md  06-source-drain-epi.md  07-ild0-dummy-removal.md  08-replacement-metal-gate.md  09-cut-metal-gate.md  10-feol-summary.md  A-qa.md  README.md  q_and_a.txt
docs/textbook/02-mol/: 00-overview.md  01-dielectric-stack.md  02-md-contact.md  03-silicide.md  04-mp-contact.md  05-vias-to-m0.md  06-defect-kingdom.md  07-summary.md  A-qa.md  README.md
docs/textbook/03-beol/: 00-overview.md  01-damascene.md  02-low-k.md  03-liner-barrier.md  04-multilayer.md  05-pad-passivation.md  06-reliability-em.md  07-reliability-tddb.md  08-summary.md  A-qa.md  README.md
docs/textbook/04-defect/: 00-overview.md  01-map-signatures.md  02-profile-cd.md  03-detection.md  04-defects-pattern.md  05-defects-material.md  06-defects-structural.md  07-rca-map.md  08-summary.md  A-qa.md  README.md
docs/textbook/05-process-tools/: 00-overview.md  01-photo.md  02-etch.md  03-deposition.md  04-epi.md  05-cmp.md  06-thermal-implant.md  07-cleaning.md  08-environment.md  09-summary.md  README.md
docs/textbook/06-inspection-tools/: 00-overview.md  01-optical.md  02-ocd.md  03-sem-inline.md  04-sem-xsem.md  05-tem.md  06-afm.md  07-ebeam.md  08-specialty.md  09-selection.md  README.md
docs/textbook/07-rca/: 00-overview.md  01-data-pareto.md  02-spc.md  03-commonality.md  04-tool-match.md  05-signature.md  06-design-collab.md  07-case-studies.md  08-summary.md  A-qa.md  README.md
models/: README.md
notebooks/: exploration.ipynb
opencode-skill/: rca-agent.md
reports/: README.md
scripts/: ask.py  check_llm.py  demo-rca-ui.sh  demo.sh  ingest.py  kill-stale.sh  learn_from_chat.py  query.py  run_benchmark.py  seed_corpus.py  seed_primer.py  triage.py
src/embedding_server/: main.py
src/kb_api/: __init__.py  cognee_mirror.py  main.py  models.py  schemas.py  session_actions.py
src/mcp_servers/: __init__.py  kb_mcp.py  stats_algo_mcp.py  wafer_data_mcp.py
src/rca/: config.py  container.py  main.py
src/rca/adapter/in_/: admin.py  mcp_kb.py  recall.py  retain.py  workspace.py
src/rca/domain/: agent_feedback.py  case_study.py  document.py  glossary.py  rca_report.py  session.py  types.py
src/rca/evaluation/: benchmark.py
src/rca/ports/in_/: admin.py  recall.py  retain.py  sign.py
src/rca/services/: digest.py  extraction.py  ingestion.py  kb.py  opencode_config.py  reasoning.py  stale_notify.py  workspace_lifecycle.py  workspace_seed.py
src/rca_knowledge/: __init__.py  config.py  llm.py
src/rca_knowledge/evaluation/: benchmark.py
src/rca_knowledge/graph/: cognee_client.py
src/rca_knowledge/ingestion/: extractor.py  pipeline.py
src/rca_knowledge/reasoning/: causal_query.py
src/rca_ui/: agent.py  config.py  kb_client.py  main.py  mcp_setup.py  ui.py  workspace.py
templates/case_workspace/: .gitignore  AGENTS.md  README.md  draft_report.md  notes.md
templates/case_workspace/.opencode/agents/: rca-agent.md
tests/: test_app_routes.py  test_buffer_registry.py  test_cognee_mirror.py  test_container.py  test_digest.py  test_drag_payload.py  test_drop_coordinator.py  test_editor_layout.py  test_file_tree_paths.py  test_kb_service.py  test_manager_queue.py  test_opencode_config.py  test_reasoning_tier_caps.py  test_session_lifecycle.py  test_sign_http.py  test_sign_report.py  test_stale_notify.py  test_workspace_lifecycle.py  test_workspace_seed.py
tests/integration/: conftest.py  test_cognee_e2e.py  test_opencode_runtime.py
