[project]
name = "rca-knowledge-poc"
version = "0.2.0"
description = "Semiconductor defect RCA knowledge graph POC: KB API + MCP servers + OpenCode skill"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # KB core
    # cognee[fastembed] — cognee 1.0+ doesn't bundle fastembed by default.
    # The fastembed extra is kept as a fallback option; the primary embedding
    # path in this POC is the local OpenAI-compatible embedding-server
    # (src/embedding_server/) backed by sentence-transformers.
    "cognee[fastembed]>=1.0",
    "sentence-transformers>=3.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "pypdf>=4.3.0",
    # KB API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # AutoCRUD = source of truth for all typed records (CaseStudy, Session,
    # RCAReport, GlossaryEntry, AgentFeedback, DocumentSource).
    # Cognee is the derived retrieval engine.
    "autocrud<=0.8.4",
    "msgspec>=0.18",
    # MCP servers
    "mcp>=1.2",
    # Mock fab data + stats algo
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    # Dev / CLI
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
kb-api = "kb_api.main:run"
embedding-server = "embedding_server.main:run"
kb-mcp = "mcp_servers.kb_mcp:main"
wafer-data-mcp = "mcp_servers.wafer_data_mcp:main"
stats-algo-mcp = "mcp_servers.stats_algo_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rca_knowledge", "src/kb_api", "src/mcp_servers", "src/embedding_server"]

[tool.uv]
package = true
