[project]
name = "rca-knowledge-poc"
version = "1.0.0"
description = "Workspace root for the RCA Knowledge POC (kb-api + rca-ui)."
readme = "README.md"
requires-python = ">=3.11"
# Workspace root depends on both members; uv installs them (and their
# transitive deps) when you run `uv sync`. The actual runtime deps are
# declared inside each member's pyproject.toml — kb-api has no nicegui
# / openai-agents, rca-ui has no cognee / sentence-transformers.
dependencies = [
    "kb-api",
    "rca-ui",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "coverage[toml]>=7.6",
    "ruff>=0.15.12",
]

[tool.uv.workspace]
members = ["packages/kb-api", "packages/rca-ui"]

[tool.uv.sources]
kb-api = { workspace = true }
rca-ui = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Root has no source — but hatchling needs SOMETHING to chew. Point it
# at an empty packages list so the wheel build is a no-op (we never
# install the root package; only the members).
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:fastapi.openapi.utils",
]

[tool.coverage.run]
source = ["packages/kb-api/src/rca", "packages/rca-ui/src/rca_ui"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
